--- a/src/styles/utilities/_alignment.scss
+++ b/src/styles/utilities/_alignment.scss
@@ -1,22 +1,49 @@
-@use '../abstracts'  as VAR;
+@use "../abstracts/config" as VAR;
 
-@mixin align-baseline { vertical-align: baseline; }
-@mixin align-top { vertical-align: top; }
-@mixin align-middle { vertical-align: middle; }
-@mixin align-bottom { vertical-align: bottom; }
+@mixin align-baseline {
+  vertical-align: baseline;
+}
+@mixin align-top {
+  vertical-align: top;
+}
+@mixin align-middle {
+  vertical-align: middle;
+}
+@mixin align-bottom {
+  vertical-align: bottom;
+}
 
 @if VAR.$generate-utility-classes {
-  .align-baseline { @include align-baseline; }
-  .align-top { @include align-top; }
-  .align-middle { @include align-middle; }
-  .align-bottom { @include align-bottom; }
+  .align-baseline {
+    @include align-baseline;
+  }
+
+  .align-top {
+    @include align-top;
+  }
+
+  .align-middle {
+    @include align-middle;
+  }
+
+  .align-bottom {
+    @include align-bottom;
+  }
 
   @each $breakpoint, $width in VAR.$breakpoints {
     @media (min-width: #{$width}) {
-      .align-baseline\@#{$breakpoint} { @include align-baseline; }
-      .align-top\@#{$breakpoint} { @include align-top; }
-      .align-middle\@#{$breakpoint} { @include align-middle; }
-      .align-bottom\@#{$breakpoint} { @include align-bottom; }
+      .align-baseline\@#{$breakpoint} {
+        @include align-baseline;
+      }
+      .align-top\@#{$breakpoint} {
+        @include align-top;
+      }
+      .align-middle\@#{$breakpoint} {
+        @include align-middle;
+      }
+      .align-bottom\@#{$breakpoint} {
+        @include align-bottom;
+      }
     }
   }
 }
