--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,27 +1,32 @@
-@use 'sass:map';
+@use "sass:map";
 
 /* Import variables */
-@use '../abstracts'  as *;
-@use '../utilities/media-queries' as media;
-  
+@use "../abstracts/config" as *;
+@use "../utilities/media-queries" as media;
+
 :root {
   --font-family-base: #{$font-family};
 }
 
 // Base typography styles
 html {
-  font-size: $base-size; 
+  font-size: $base-size;
 }
 
 body {
   font-family: var(--font-family-base);
   font-weight: 400;
   line-height: 1.5;
-  color: var(--text-primary);
+  color: var(--text-default);
 }
 
 // Headings
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-bottom: 0.5em;
   font-family: var(--font-family-heading);
   font-weight: 700;
@@ -29,27 +34,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: map.get($font-sizes, '4xl');
+  font-size: map.get($font-sizes, "4xl");
 }
 
 h2 {
-  font-size: map.get($font-sizes, '3xl');
+  font-size: map.get($font-sizes, "3xl");
 }
 
 h3 {
-  font-size: map.get($font-sizes, '2xl');
+  font-size: map.get($font-sizes, "2xl");
 }
 
 h4 {
-  font-size: map.get($font-sizes, 'xl');
+  font-size: map.get($font-sizes, "xl");
 }
 
 h5 {
-  font-size: map.get($font-sizes, 'lg');
+  font-size: map.get($font-sizes, "lg");
 }
 
 h6 {
-  font-size: map.get($font-sizes, 'base');
+  font-size: map.get($font-sizes, "base");
 }
 
 // Paragraphs
@@ -59,7 +64,7 @@ p {
 
 // Small text
 small {
-  font-size: map.get($font-sizes, 'sm');
+  font-size: map.get($font-sizes, "sm");
 }
 
 // Buttons
@@ -69,25 +74,27 @@ button {
   border-radius: 0.25rem;
   font-family: var(--font-family-base);
   cursor: pointer;
-  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  
+  transition:
+    background-color 0.2s ease-in-out,
+    color 0.2s ease-in-out;
+
   &:focus {
     outline: none;
   }
 
   &:disabled {
-    background-color: #E0E0E0; // Disabled button color
-    color: #A0A0A0; // Disabled text color
+    background-color: #e0e0e0; // Disabled button color
+    color: #a0a0a0; // Disabled text color
     cursor: not-allowed;
   }
 
-   // Default styling when no bg-* class is present
-   &:not([class*="bg-"]) {
-    background-color: var(--button-bg-color, #007BFF); // Default button color
-    color: var(--button-text-color, #FFF);
-    
+  // Default styling when no bg-* class is present
+  &:not([class*="bg-"]) {
+    background-color: var(--button-bg-color, #007bff); // Default button color
+    color: var(--button-text-color, #fff);
+
     &:hover {
-      background-color: var(--button-bg-color-hover, #0056B3);
+      background-color: var(--button-bg-color-hover, #0056b3);
     }
   }
 }
@@ -161,14 +168,15 @@ figure {
 
 figcaption {
   font-size: 0.875rem; // Smaller font for captions
-  color: var(--text-secondary, #666); // Optional secondary text color
+  color: var(--text-muted, #666); // Optional secondary text color
 }
 
 // Links
 a {
   transition: color 0.2s ease-in-out;
 
-  &:not([class*="text-"]){ // document: if no hover or normal text provided it will use the default link color
+  &:not([class*="text-"]) {
+    // document: if no hover or normal text provided it will use the default link color
     color: var(--link-color);
 
     &:hover {
@@ -196,15 +204,15 @@ label[for] {
 }
 
 code {
-  font-family: 'Courier New', Courier, monospace; 
-  background-color: #f8f8f8; 
-  color: #d63384; 
+  font-family: "Courier New", Courier, monospace;
+  background-color: #f8f8f8;
+  color: #d63384;
   padding: 2px 6px;
   border-radius: 3px;
   white-space: nowrap;
 
   @include media.dark-mode {
-    background-color: #333; 
-    color: #f8f8f2; 
+    background-color: #333;
+    color: #f8f8f2;
   }
 }
