--- a/src/styles/utilities/_media-queries.scss
+++ b/src/styles/utilities/_media-queries.scss
@@ -2,9 +2,10 @@
 // Module: Media Queries
 
 @use "sass:map";
+@use "sass:string";
 @use "sass:math";
 @use "sass:meta";
-@use "../abstracts" as *;
+@use "../abstracts/config" as *;
 @use "../abstracts/functions" as FN;
 
 /**
@@ -12,25 +13,16 @@
  * @param {string|number} $breakpoint - The breakpoint value.
  * @param {string} $type - The media query type (e.g. 'lg', 'md').
  */
-@mixin media-up($breakpoint) {
-  $blueprint-value: FN.get-breakpoint-value($breakpoint);
-  $unit: math.unit($blueprint-value);
-  @if $unit == '' {
-    $blueprint-value: $blueprint-value * 1px; 
-    $unit: 'px';
-  }
-  
-  @media screen and (min-width: FN.get-breakpoint-value($blueprint-value)) {
+@mixin media-up($breakpoint, $debug: null) {
+  $blueprint-value: FN.fix-units(FN.get-breakpoint-value($breakpoint, $debug));
+  $val: $blueprint-value - 0.01;
+  @media screen and (min-width: #{$val}) {
     @content;
   }
 }
 
 @mixin media-down($breakpoint) {
-  $blueprint-value: FN.get-breakpoint-value($breakpoint);
-  $unit: math.unit($blueprint-value);
-  @if $unit == '' {
-    $blueprint-value: $blueprint-value * 1px; 
-  }
+  $blueprint-value: FN.fix-units(FN.get-breakpoint-value($breakpoint));
   $val: $blueprint-value - 0.01;
   @media screen and (max-width: #{$val}) {
     @content;
@@ -38,14 +30,9 @@
 }
 
 @mixin media-between($lower, $upper) {
-  $lower-val: FN.get-breakpoint-value($lower);
-  $upper-val: FN.get-breakpoint-value($upper);
-  $unit: math.unit($upper-val);
-  @if $unit == '' {
-    $upper-val: $upper-val * 1px; 
-  }
-  $upper-val: $blueprint-value - 0.01;
-
+  $lower-val: FN.fix-units(FN.get-breakpoint-value($lower));
+  $upper-val: FN.fix-units(FN.get-breakpoint-value($upper));
+  $upper-val: $upper-val - 0.01;
   @media screen and (min-width: #{$lower-val}) and (max-width: #{$upper-val}) {
     @content;
   }
@@ -53,7 +40,16 @@
 
 // Only at specific breakpoint
 @mixin media-only($breakpoint) {
-  $min: FN.get-breakpoint-value($breakpoint);
+  @if meta.type-of($breakpoint) == number and math.is-unitless($breakpoint) {
+    @error "media-only() needs a breakpoint value";
+  }
+
+  @if map.has-key($breakpoints, $breakpoint) {
+    $min: FN.get-breakpoint-value($breakpoint);
+  } @else {
+    @error "media-only() needs a valid breakpoint value #{$breakpoint} is not in your $breakpoints map";
+  }
+
   $next-breakpoint: null;
 
   @each $name, $width in $breakpoints {
@@ -108,12 +104,13 @@
 // todo: doc
 // User preference takes precedence
 @mixin dark-mode {
-  @if $enable-dark-mode { // todo: documentation as this will fully remove the dark mode by force
+  @if $enable-dark-mode {
+    // todo: documentation as this will fully remove the dark mode by force
     // Apply when user explicitly chooses dark
     [data-theme="dark"] & {
       @content;
     }
-  
+
     // Apply when system is dark AND user hasn't made a choice
     @media (prefers-color-scheme: dark) {
       [data-theme="system"] & {
