--- a/src/styles/utilities/_transitions.scss
+++ b/src/styles/utilities/_transitions.scss
@@ -1,5 +1,5 @@
 // _transitions.scss
-@use '../abstracts'  as *;
+@use "../abstracts/config" as *;
 
 /**
  * Transition Utilities
@@ -9,15 +9,27 @@
  * - .duration-{time}: Set transition duration
  * - .ease-{type}: Set transition timing function
  * - .delay-{time}: Set transition delay
- */ 
+ */
 
 // Property-specific transition mixins
-@mixin transition-none { transition-property: none; }
-@mixin transition { transition-property: all; }
-@mixin transition-colors { transition-property: color, background-color, border-color, text-decoration-color, fill, stroke; }
-@mixin transition-opacity { transition-property: opacity; }
-@mixin transition-shadow { transition-property: box-shadow; }
-@mixin transition-transform { transition-property: transform; }
+@mixin transition-none {
+  transition-property: none;
+}
+@mixin transition {
+  transition-property: all;
+}
+@mixin transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+}
+@mixin transition-opacity {
+  transition-property: opacity;
+}
+@mixin transition-shadow {
+  transition-property: box-shadow;
+}
+@mixin transition-transform {
+  transition-property: transform;
+}
 
 // Duration mixins
 @mixin duration($time) {
@@ -25,10 +37,18 @@
 }
 
 // Timing function mixins
-@mixin ease-linear { transition-timing-function: linear; }
-@mixin ease-in { transition-timing-function: cubic-bezier(0.4, 0, 1, 1); }
-@mixin ease-out { transition-timing-function: cubic-bezier(0, 0, 0.2, 1); }
-@mixin ease-in-out { transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); }
+@mixin ease-linear {
+  transition-timing-function: linear;
+}
+@mixin ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+@mixin ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+@mixin ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 // Delay mixins
 @mixin delay($time) {
@@ -37,48 +57,63 @@
 
 // Timing functions
 $timing-functions: (
-  'linear': linear,
-  'in': cubic-bezier(0.4, 0, 1, 1),
-  'out': cubic-bezier(0, 0, 0.2, 1),
-  'in-out': cubic-bezier(0.4, 0, 0.2, 1),
+  "linear": linear,
+  "in": cubic-bezier(0.4, 0, 1, 1),
+  "out": cubic-bezier(0, 0, 0.2, 1),
+  "in-out": cubic-bezier(0.4, 0, 0.2, 1),
 );
 
 // Durations
 $durations: (
-  '0': 0ms,
-  '75': 75ms,
-  '100': 100ms,
-  '150': 150ms,
-  '200': 200ms,
-  '300': 300ms,
-  '500': 500ms,
-  '700': 700ms,
-  '1000': 1000ms,
+  "0": 0ms,
+  "75": 75ms,
+  "100": 100ms,
+  "150": 150ms,
+  "200": 200ms,
+  "300": 300ms,
+  "500": 500ms,
+  "700": 700ms,
+  "1000": 1000ms,
 );
-
 
 // Delays
 $delays: (
-  '0': 0ms,
-  '75': 75ms,
-  '100': 100ms,
-  '150': 150ms,
-  '200': 200ms,
-  '300': 300ms,
-  '500': 500ms,
-  '700': 700ms,
-  '1000': 1000ms,
+  "0": 0ms,
+  "75": 75ms,
+  "100": 100ms,
+  "150": 150ms,
+  "200": 200ms,
+  "300": 300ms,
+  "500": 500ms,
+  "700": 700ms,
+  "1000": 1000ms,
 );
-
 
 @if $generate-utility-classes {
   // Property-specific transitions
-  .transition-none { @include transition-none; }
-  .transition { @include transition; }
-  .transition-colors { @include transition-colors; }
-  .transition-opacity { @include transition-opacity; }
-  .transition-shadow { @include transition-shadow; }
-  .transition-transform { @include transition-transform; }
+  .transition-none {
+    @include transition-none;
+  }
+
+  .transition {
+    @include transition;
+  }
+
+  .transition-colors {
+    @include transition-colors;
+  }
+
+  .transition-opacity {
+    @include transition-opacity;
+  }
+
+  .transition-shadow {
+    @include transition-shadow;
+  }
+
+  .transition-transform {
+    @include transition-transform;
+  }
 
   @each $name, $value in $durations {
     .duration-#{$name} {
@@ -93,10 +128,21 @@ $delays: (
   }
 
   // Specific timing function classes
-  .ease-linear { @include ease-linear; }
-  .ease-in { @include ease-in; }
-  .ease-out { @include ease-out; }
-  .ease-in-out { @include ease-in-out; }
+  .ease-linear {
+    @include ease-linear;
+  }
+
+  .ease-in {
+    @include ease-in;
+  }
+
+  .ease-out {
+    @include ease-out;
+  }
+
+  .ease-in-out {
+    @include ease-in-out;
+  }
 
   @each $name, $value in $delays {
     .delay-#{$name} {
@@ -111,28 +157,48 @@ $delays: (
       .transition\@#{$breakpoint} {
         @include transition;
       }
-      
+
       // Property-specific transitions
-      .transition-none\@#{$breakpoint} { @include transition-none; }
-      .transition\@#{$breakpoint} { @include transition; }
-      .transition-colors\@#{$breakpoint} { @include transition-colors; }
-      .transition-opacity\@#{$breakpoint} { @include transition-opacity; }
-      .transition-shadow\@#{$breakpoint} { @include transition-shadow; }
-      .transition-transform\@#{$breakpoint} { @include transition-transform; }
-      
+      .transition-none\@#{$breakpoint} {
+        @include transition-none;
+      }
+      .transition\@#{$breakpoint} {
+        @include transition;
+      }
+      .transition-colors\@#{$breakpoint} {
+        @include transition-colors;
+      }
+      .transition-opacity\@#{$breakpoint} {
+        @include transition-opacity;
+      }
+      .transition-shadow\@#{$breakpoint} {
+        @include transition-shadow;
+      }
+      .transition-transform\@#{$breakpoint} {
+        @include transition-transform;
+      }
+
       // Duration responsive variants
       @each $name, $value in $durations {
         .duration-#{$name}\@#{$breakpoint} {
           @include duration($value);
         }
       }
-      
+
       // Timing function responsive variants
-      .ease-linear\@#{$breakpoint} { @include ease-linear; }
-      .ease-in\@#{$breakpoint} { @include ease-in; }
-      .ease-out\@#{$breakpoint} { @include ease-out; }
-      .ease-in-out\@#{$breakpoint} { @include ease-in-out; }
-      
+      .ease-linear\@#{$breakpoint} {
+        @include ease-linear;
+      }
+      .ease-in\@#{$breakpoint} {
+        @include ease-in;
+      }
+      .ease-out\@#{$breakpoint} {
+        @include ease-out;
+      }
+      .ease-in-out\@#{$breakpoint} {
+        @include ease-in-out;
+      }
+
       // Delay responsive variants
       @each $name, $value in $delays {
         .delay-#{$name}\@#{$breakpoint} {
